--- a/EmployeeTracker/app/src/main/res/drawable/google_button.xml
+++ b/EmployeeTracker/app/src/main/res/drawable/google_button.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <corners
-        android:radius="4dp"
+        android:radius="2dp"
         />
     <solid
-        android:color="#125ce6"
+        android:color="#e23e2b"
         />
     <padding
         android:left="0dp"
@@ -14,8 +14,8 @@
         android:bottom="0dp"
         />
     <size
-        android:width="270dp"
-        android:height="60dp"
+        android:width="250dp"
+        android:height="40dp"
         />
     <stroke
         android:width="2dp"
