--- a/HHP/app/src/main/res/layout/activity_main.xml
+++ b/HHP/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.daniel.hhp.MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:text="Are you an employer or an employee?"
+        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_gravity="center_vertical" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
 
-    </android.support.design.widget.AppBarLayout>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/employer"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/buttonshape"
+            android:textColor="#000000"
+            android:layout_weight="1"
+            android:textSize="20sp"/>
 
-    <include layout="@layout/content_main" />
+        <Button
+            android:layout_width="177dp"
+            android:layout_height="wrap_content"
+            android:text="@string/employee"
+            android:background="@drawable/buttonshape"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:elevation="0dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+    </LinearLayout>
+
+</LinearLayout>
